fixed navigation overflow

--- a/frontend/src/components/Content/Content.css
+++ b/frontend/src/components/Content/Content.css
@@ -15,8 +15,6 @@
 
 .main-content {
     width: 100%;
-    overflow-y: scroll;
-    /* overflow-x: hidden; */
 }
 
 .main-container {
